--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,10 @@ dependencies {
 
     /*added*/
     implementation 'com.android.support:design:26.1.0'
-    // implementation 'com.example.everb.kronicle:tabpGravity'
+    /*For SQL and recycle view*/
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
