--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/kronicle"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="true">
+        android:theme="@style/AppTheme">
 
         <!-- Splash Screen -->
         <activity
@@ -51,7 +51,7 @@
             android:name=".About"
             android:label="@string/about"
             android:parentActivityName=".MainActivity" />
-
+        <activity android:name=".Timer.TimerSettings"></activity>
     </application>
 
 </manifest>
