--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.everb.kronicle">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -26,6 +28,7 @@
         <activity
             android:name=".LandingPage"
             android:theme="@style/AppTheme" />
+
         <activity
             android:name=".LogoutHandler"
             android:theme="@style/AppTheme" />
