--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity
             android:name=".Settings"
             android:label="@string/settings"
+            android:theme="@style/TitleTheme"
             android:parentActivityName=".MainActivity" />
         <!-- About -->
         <activity
